--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-html {
+html,body {
     height: 100%;
     width: 100%;
-  }
-  
-  body {
     font-family: "Segoe UI";
     overflow-x: hidden;
-  }
+    margin:0px;
+	padding:0px;
+}
   
   h1,
   h2,
@@ -28,7 +27,7 @@ html {
     align-items: center;
     justify-content: center;
     width: 300px;
-    height: 360px;
+    height: 400px;
     font-size: 18px;
     border: 0.1px solid lightblue;
     border-radius: 7px;
@@ -104,13 +103,63 @@ html {
   }
   
   #tabla table {
-    transition: opacity 1s ease-in-out;
+    border-collapse: collapse;
+    border: 0.3px solid lightblue;
+  }
+
+  #tabla table thead {
+    background-color: aliceblue;
+    border: 0.3px solid lightblue;
+    padding: 10px;
+  }
+
+  #tabla table thead tr,th{
+    font-style: italic;
+    color: rgb(120, 120, 120);
+    border: 0.3px solid lightblue;
+    padding: 10px;
+  }
+
+  #tabla table tbody tr,td{
+    border: 0.3px solid lightblue;
+    padding: 10px;
   }
   
   .main .title-page {
     width: 100%;
     height: 70px;
     text-align: center;
-    margin: 20px;
+    margin: 8px;
     padding: 15px;
+  }
+
+  footer{
+    position: relative;
+    width: 100%;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:880px;
+
+  }
+
+  footer a{
+    color: black;
+    text-decoration: none;
+    font-style: italic;
+    font-size: 25px;
+    transition: color 0.3s ease-in-out;
+  }
+
+
+  footer a i{
+    color: black;
+    margin-top: 30%;
+    font-size: 30px;
+    transition: color 0.3s ease-in-out;
+  }
+
+  footer #github:hover{
+    color: rgb(55, 80, 89);
   }
