--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html,body {
     font-family: "Segoe UI";
     overflow-x: hidden;
     margin:0px;
-	padding:0px;
+	  padding:0px;
 }
   
   h1,
@@ -126,11 +126,26 @@ html,body {
   }
   
   .main .title-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 70px;
     text-align: center;
-    margin: 8px;
+    margin-top: 30px;
+    margin-bottom: 40px;
     padding: 15px;
+    gap:100px
+  }
+
+  .main .title-page .logo-sistemas{
+    width:300px;
+    height: 120px;
+  }
+
+  .main .title-page .logo-ufps{
+    width: 110px;
+    height: 110px;
   }
 
   footer{
