--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,21 @@ html,body {
     padding: 7px;
     border-radius: 4px;
   }
+
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
   
   #tabla table{
+    opacity: 1;
     border-collapse: collapse;
     border: 0.3px solid lightblue;
+    animation: fade-in 0.4s ease-in-out;
   }
 
   #tabla table thead {
@@ -131,50 +142,102 @@ html,body {
     align-items: center;
     width: 100%;
     height: 70px;
-    text-align: center;
     margin-top: 30px;
     margin-bottom: 40px;
-    padding: 15px;
-    gap:100px
+    gap: 5%;
   }
 
   .main .title-page .logo-sistemas{
-    width:300px;
-    height: 120px;
+    width:18%;
+    height: 110%;
   }
 
   .main .title-page .logo-ufps{
-    width: 110px;
-    height: 110px;
+    width: 8%;
+    height: 145%;
   }
 
   footer{
     position: relative;
     width: 100%;
+    margin-top: 30px;
     margin-bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap:880px;
-
   }
-
+  
   footer a{
+    position: relative;
     color: black;
     text-decoration: none;
     font-style: italic;
-    font-size: 25px;
-    transition: color 0.3s ease-in-out;
+    font-size: 20px;
+    transition: color 0.3s ease 0s;
   }
 
-
-  footer a i{
-    color: black;
-    margin-top: 30%;
-    font-size: 30px;
-    transition: color 0.3s ease-in-out;
-  }
-
-  footer #github:hover{
+  footer a:hover{
     color: rgb(55, 80, 89);
+    transition: color 0.3s ease 0s;
   }
+
+  @media screen and (max-width: 870px) {
+
+    .main .title-page {
+      display: flex;
+      flex-flow: row wrap;
+      width: 100%;
+      height: 1%;
+      text-align: center;
+      justify-content: center;
+    }
+
+   .main .title-page .logo-sistemas{
+    width:30%;
+    height: 100%;
+  }
+
+  .main .title-page .logo-ufps{
+    width: 10%;
+    height: 140%;
+  }
+
+    .container{
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .container .table-answer {
+      position: relative;
+      display: inline;
+      width: 85%;
+      height: 100%;
+      border: 0.1px solid lightblue;
+      border-radius: 7px;
+      box-shadow: 0px 0px 8px rgba(173, 216, 230, 0.9);
+      margin-top: -35px;
+    }
+
+    .container .table-answer .header {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 150px;
+    }
+
+    .container .table-answer .header #algorithm {
+      background-color: lightblue;
+      padding: 7px;
+      border-radius: 4px;
+    }
+
+    footer{
+      position: relative;
+      width: 100%;
+      height: 1%;
+      display: grid;
+    }
+    
+  }
+
