--- a/css/style.css
+++ b/css/style.css
@@ -160,24 +160,40 @@ html,body {
   footer{
     position: relative;
     width: 100%;
-    margin-top: 30px;
+    margin-top: 40px;
     margin-bottom: 30px;
     display: flex;
-    align-items: center;
+    align-items: center;  
     justify-content: center;
-    gap:880px;
-  }
+}
+
+footer .foot{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  gap: 300px;
+}
   
   footer a{
     position: relative;
     color: black;
-    text-decoration: none;
-    font-style: italic;
-    font-size: 20px;
-    transition: color 0.3s ease 0s;
   }
 
-  footer a:hover{
+  footer a i{
+    position: relative;
+    color: black;
+    font-size: 20px;
+  }
+
+  footer .text span{
+    font-style: italic;
+    color: #434242;
+    font-weight: bold;
+    font-size: 13px;
+  }
+
+  footer i:hover{
     color: rgb(55, 80, 89);
     transition: color 0.3s ease 0s;
   }
