--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,46 @@ html,body {
     display: inline;
     text-align: center;
   }
+
+  .container .table-answer .chart{
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+
+  .container .table-answer .chart .gantt{
+    display: flex;
+  }
+  
+  .container .table-answer .chart .gantt .id{
+    width: 40px;
+    height: 35px;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: #c4def5;
+    border: 1px solid rgb(148, 184, 196);
+  }
+
+  .container .table-answer .chart .burst{
+    display: flex;
+  }
+
+  .container .table-answer .chart .burst .br{
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    width: 42px;
+    height: 20px;
+  }
   
   .container .table-answer .header {
     display: flex;
@@ -115,6 +155,7 @@ html,body {
     border-collapse: collapse;
     border: 0.3px solid lightblue;
     animation: fade-in 0.4s ease-in-out;
+    margin-bottom: -20px;
   }
 
   #tabla table thead {
@@ -155,6 +196,8 @@ html,body {
     width: 8%;
     height: 145%;
   }
+
+
 
   footer{
     position: relative;
