--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,28 @@ html,body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     width: 300px;
-    height: 400px;
+    height: 100%;
     font-size: 18px;
     border: 0.1px solid lightblue;
     border-radius: 7px;
     box-shadow: 0px 0px 8px rgba(173, 216, 230, 0.9);
+  }
+
+  .container-form .video{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+    width: 90%;
+    height: 50%;
+    padding: 15px;
+   }
+
+  .container-form .video iframe{
+   width: 95%;
+   height: 100%;
+
   }
   
   .container-form .form-body .times label {
